Fix styled h1 spacing

--- a/static/less/mixins.less
+++ b/static/less/mixins.less
@@ -335,6 +335,8 @@
 
   @media (min-width: @screen-sm-min) {
     background: url('../img/h3-line.png') repeat-x 0 8px;
+    margin-top: 20px;
+    padding-bottom: 40px;
     span {
       background: #fff;
       padding-left: 16px;
